WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176807
AnimationBase should point to Element instead of RenderElement
https://bugs.webkit.org/show_bug.cgi?id=176807
Summary
AnimationBase should point to Element instead of RenderElement
Antti Koivisto
Reported
2017-09-12 13:42:25 PDT
A step towards making animation system operate on elements and styles instead renderers.
Attachments
patch
(17.75 KB, patch)
2017-09-12 13:47 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2017-09-12 13:47:09 PDT
Created
attachment 320565
[details]
patch
Andreas Kling
Comment 2
2017-09-12 14:40:17 PDT
Comment on
attachment 320565
[details]
patch r=me
WebKit Commit Bot
Comment 3
2017-09-12 15:09:50 PDT
Comment on
attachment 320565
[details]
patch Clearing flags on attachment: 320565 Committed
r221941
: <
http://trac.webkit.org/changeset/221941
>
WebKit Commit Bot
Comment 4
2017-09-12 15:09:52 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-09-18 23:45:38 PDT
<
rdar://problem/34510878
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug